codegen/ui_tests/rhai_mod_inner_cfg_false.stderr
error[E0433]: failed to resolve: could not find `test_mod` in `test_module`
  --> ui_tests/rhai_mod_inner_cfg_false.rs:24:21
   |
24 |     if test_module::test_mod::test_fn(n) {
   |                     ^^^^^^^^ could not find `test_mod` in `test_module`
   |
note: found an item that was configured out
  --> ui_tests/rhai_mod_inner_cfg_false.rs:12:13
   |
12 |     pub mod test_mod {
   |             ^^^^^^^^
   = note: the item is gated behind the `unset_feature` feature
